--- a/starbuzz.css
+++ b/starbuzz.css
@@ -15,9 +15,8 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
-  width: 420px;
-  float: left;
+  margin:           0px 330px 10px 10px;
+   
   
 }
 
@@ -25,11 +24,12 @@ body {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 470px;
+  margin:           0px 10px 10px 10px;
   position: absolute;
   top: 128px;
   right: 0px;
-  widows: 280px;
+  width: 280px;
+  
  
 }
 
@@ -40,7 +40,7 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-  clear:            left;
+  clear:            right;
 }
 
 h1 {
